# squadsquirtle

./: CMakeLists.txt  README.md  ca.html  dem.html  index.html  lab1.html  lab2.html  lab3.html  lab4.html  lab5.html  lab6.html  lab7(parcial).html  lab7.html  lab8.html  lex.html  main.cpp  mf.html  rft.html  seminar.html  spv.html  squadsquirtle  tc.html
